--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
+@import url(https://fonts.googleapis.com/css2?family=Poppins&display=swap);
 /* Import Font */
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 body {
     font-family: "Poppins", serif;
@@ -53,3 +53,4 @@ body {
 #footer p {
     color: white;
 }
+
