--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,9 +21,9 @@ h1 {
     background-color: #15203c;
     padding: 0.5rem 1rem;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
+
 .navbar-nav {
     margin: 0 auto;
     display: flex;
@@ -167,36 +167,48 @@ h1 {
 .about-us{
     padding:80px 0px;
 }
+
 #about-us-content{
     max-width: 1200px;
     margin:0 auto;
     padding:0 20px;
 }
+
 .row{
     display: flex;
     flex-wrap: wrap;
+
 }
+
+#text-about-us {
+    font-size: 18px;
+}
+
 .flex{
     flex: 0 0 50%;
     max-width:50%;
     padding:0 20px;
 }
+
 .about-us h2{
     font-size: 45px;
     margin-bottom: 20px;
     color:#333;
 }
+
 .about-us h3{
     font-size: 22px;
     color:#888;
     margin-bottom: 8px;
 }
+
 .about-us p{
     font-size: 10px;
     line-height: 1.5;
     color:#333;
     margin-bottom: 20px;
 }
+
 .about-us img{
     display:block;
     max-width: 100%;
@@ -204,9 +216,11 @@ h1 {
     margin:0 auto;
     border-radius: 20px;
 }
+
 .social-links{
     margin-bottom: 20px;
 }
+
 .social-links a{
     display: inline-block;
     width:40px;
@@ -219,9 +233,11 @@ h1 {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0, 3);
     transition: all 0.4s ease;
 }
+
 .social-links a:hover{
     transform: translateY(-3px);
 }
+
 .btn{
     text-decoration: none;
     color:#fff;
@@ -234,6 +250,7 @@ h1 {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0, 3);
     transition: all 0.4s ease;
 }
+
 .btn:hover{
     transform: translateY(-3px);
 }
@@ -262,6 +279,78 @@ h1 {
         padding: 8px 16px;
         margin-bottom: 30px;
     }
+}
+
+.contact-us-content {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.header {
+    text-align: center;
+    padding: 50px 0;
+}
+
+.header h1 {
+    font-size: 2.5em;
+    margin: 0;
+    color: #0f3461;
+}
+
+.contact-details {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 20px;
+    padding: 20px 0;
+}
+
+.contact-details div {
+    flex: 1 1 calc(50% - 20px);
+    min-width: 300px;
+}
+
+.contact-details p {
+    margin: 10px 0;
+    line-height: 1.6;
+}
+
+.contact-details a {
+    color: #ff4c4c;
+    text-decoration: none;
+}
+
+.map {
+    margin: 20px 0;
+}
+
+iframe {
+    width: 100%;
+    height: 300px;
+    border: none;
+}
+
+
+.social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.social-icons a {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-color: #444;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.2em;
 }
 
 /* Footer */
