--- a/resources/css/auth.css
+++ b/resources/css/auth.css
@@ -1,5 +1,5 @@
 /* Import Font */
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url(https://fonts.googleapis.com/css2?family=Poppins&display=swap);
 
 body {
     font-family: "Poppins", sans-serif;
@@ -67,3 +67,4 @@ button:hover {
     height: 1px;
     background: #ccc;
 }
+
