--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,5 @@
-@import url(https://fonts.googleapis.com/css2?family=Poppins&display=swap);
 /* Import Font */
+@import url(https://fonts.googleapis.com/css2?family=Poppins&display=swap);
 
 body {
     font-family: "Poppins", serif;
@@ -21,20 +21,25 @@ h1 {
     background-color: #15203c;
     padding: 0.5rem 1rem;
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.navbar-nav {
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    gap: 4rem;
-    list-style: none;
-    padding: 0;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
-.nav-item {
+#navbarNav {
+    display: flex;
+    justify-content: left;
+    gap: 2rem;
+    flex-grow: 1;
+}
+
+#btn-auth {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.navbar-nav .nav-item {
     display: inline-block;
+    margin-right: 1rem;
 }
 
 .nav-link {
@@ -69,7 +74,7 @@ h1 {
     color: #15203c;
 }
 
-/* Mobile responsiveness for Navbar*/
+/* Mobile responsiveness for Navbar */
 @media (max-width: 768px) {
     #navbar-color {
         flex-direction: column;
@@ -79,7 +84,7 @@ h1 {
     .navbar-nav {
         flex-direction: column;
         gap: 15px;
-        text-align: center;
+        text-align: left;
         display: none; /* Default: hidden */
     }
 
@@ -104,6 +109,11 @@ h1 {
     background-image: url('/images/background.png');
     background-size: cover;
     background-position: 70%;
+}
+
+/* Datatables */
+.table-container {
+    padding-bottom: 1rem;
 }
 
 /* shop */
@@ -138,7 +148,7 @@ h1 {
     color: #555;
 }
 
-.btn-primary {
+#shop-content .btn-primary {
     border-radius: 30px;
     background-color: #005BE4;
     border: none;
@@ -167,36 +177,48 @@ h1 {
 .about-us{
     padding:80px 0px;
 }
+
 #about-us-content{
     max-width: 1200px;
     margin:0 auto;
     padding:0 20px;
 }
+
 .row{
     display: flex;
     flex-wrap: wrap;
+
 }
+
+#text-about-us {
+    font-size: 18px;
+}
+
 .flex{
     flex: 0 0 50%;
     max-width:50%;
     padding:0 20px;
 }
+
 .about-us h2{
     font-size: 45px;
     margin-bottom: 20px;
     color:#333;
 }
+
 .about-us h3{
     font-size: 22px;
     color:#888;
     margin-bottom: 8px;
 }
+
 .about-us p{
     font-size: 10px;
     line-height: 1.5;
     color:#333;
     margin-bottom: 20px;
 }
+
 .about-us img{
     display:block;
     max-width: 100%;
@@ -204,9 +226,11 @@ h1 {
     margin:0 auto;
     border-radius: 20px;
 }
+
 .social-links{
     margin-bottom: 20px;
 }
+
 .social-links a{
     display: inline-block;
     width:40px;
@@ -219,10 +243,12 @@ h1 {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0, 3);
     transition: all 0.4s ease;
 }
+
 .social-links a:hover{
     transform: translateY(-3px);
 }
-.btn{
+
+.about-us .btn{
     text-decoration: none;
     color:#fff;
     display: inline-block;
@@ -234,10 +260,11 @@ h1 {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0, 3);
     transition: all 0.4s ease;
 }
+
 .btn:hover{
     transform: translateY(-3px);
 }
-@media  screen and(max-width: 768px) {
+@media screen and(max-width: 768px) {
     .row{
         flex-direction: column;
     }
@@ -257,11 +284,83 @@ h1 {
         font-size: 14px;
         margin-right: 5px;
     }
-    .btn{
+    .about-us .btn{
         font-size: 14px;
         padding: 8px 16px;
         margin-bottom: 30px;
     }
+}
+
+.contact-us-content {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.header {
+    text-align: center;
+    padding: 50px 0;
+}
+
+.header h1 {
+    font-size: 2.5em;
+    margin: 0;
+    color: #0f3461;
+}
+
+.contact-details {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 20px;
+    padding: 20px 0;
+}
+
+.contact-details div {
+    flex: 1 1 calc(50% - 20px);
+    min-width: 300px;
+}
+
+.contact-details p {
+    margin: 10px 0;
+    line-height: 1.6;
+}
+
+.contact-details a {
+    color: #ff4c4c;
+    text-decoration: none;
+}
+
+.map {
+    margin: 20px 0;
+}
+
+iframe {
+    width: 100%;
+    height: 300px;
+    border: none;
+}
+
+
+.social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.social-icons a {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-color: #444;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.2em;
 }
 
 /* Footer */
@@ -278,3 +377,4 @@ h1 {
 .footer .icons i {
     margin: 0 10px;
 }
+
