--- a/public/css/app.css
+++ b/public/css/app.css
@@ -290,7 +290,7 @@ h1 {
         margin-bottom: 30px;
     }
 }
-
+/* contact us */
 .contact-us-content {
     max-width: 1200px;
     margin: 0 auto;
