--- a/public/css/app.css
+++ b/public/css/app.css
@@ -290,6 +290,7 @@ h1 {
         margin-bottom: 30px;
     }
 }
+
 /* contact us */
 .contact-us-content {
     max-width: 1200px;
@@ -328,7 +329,7 @@ h1 {
 }
 
 .contact-details a {
-    color: #ff4c4c;
+    color: #0f3461;
     text-decoration: none;
 }
 
@@ -341,7 +342,6 @@ iframe {
     height: 300px;
     border: none;
 }
-
 
 .social-icons {
     display: flex;
@@ -377,4 +377,5 @@ iframe {
 .footer .icons i {
     margin: 0 10px;
 }
+
 
